--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "numeral": "^1.5.3",
     "postcss-loader": "^1.0.0",
     "postcss-nested": "^1.0.0",
+    "prismjs": "^1.5.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.25",
