update demo page

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "start": "babel-node server.js",
-    "compile": "webpack --config ./config/webpack.dist.babel.js"
+    "compile": "rm -rf ./dist && webpack --config ./config/webpack.dist.babel.js"
   },
   "dependencies": {
     "autoprefixer": "^6.5.3",
